# match-ups

./: README.md  pyproject.toml
match_ups/: __main__.py  cli.py  create_match_ups.py  pair.py
tests/: test_cli.py  test_create_match_ups.py
