[tool.poetry]
name = "match-ups"
version = "0.1.0"
description = ""
authors = ["Rishabh Sharma <99526730+sharma-rishabh@users.noreply.github.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
