[tool.poetry]
name = "match-ups"
version = "0.1.1"
description = ""
authors = ["Rishabh Sharma <99526730+sharma-rishabh@users.noreply.github.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
match-ups = "match_ups.__main__:main"
